--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
               <u> <h5>about my self :</h5></u>
               <p>hii i am sameer i am from AP andhra pradesh banaganapalli nandyal distric i had completed recently my intermediate in banaganapalli SSS JR COLLAGE  in intermediate i had taken a branch MPC with 65% after than i had written eamcet exam in nandyal SVR engneering collage i had got  </p>
     <a href="Umar.html">umar</a>
+
+    <img src="demo1.jpg" alt="umar" width="500" height="500">
             
 
 </body>
